[gd_scene load_steps=5 format=2]

[ext_resource path="res://HotFire.tscn" type="PackedScene" id=1]
[ext_resource path="res://Collectable.gd" type="Script" id=2]
[ext_resource path="res://ColdFire.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[node name="Collectable" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="HotFire" parent="." instance=ExtResource( 1 )]
emitting = false

[node name="ColdFire" parent="." instance=ExtResource( 3 )]
emitting = false

[connection signal="body_entered" from="." to="." method="_on_Collectable_body_entered"]
